jeg har endret på biografi og navn

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Ola Nordmann</title>
+    <title>Kristian Flatval</title>
 
-    <meta name="author" content="Ola Nordmann">
+    <meta name="author" content="Kristian Flatval">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -20,13 +20,10 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Ola Nordmann
+                  Kristian Flatval
                 </p>
                 <p>
-		I'm a research scientist at <a href="https://www.sintef.no/">SINTEF</a> in Trondheim, where I lead a team working on computer vision and AI for Arctic applications.
-		Previously, I worked at the <a href="https://www.ntnu.edu/">Norwegian University of Science and Technology (NTNU)</a> on projects involving autonomous systems, marine robotics, and sustainable AI.
-		I completed my PhD at <a href="https://www.uio.no/">University of Oslo</a>, focusing on machine learning for environmental monitoring in Nordic conditions.
-		I've received the Norwegian Research Council's Outstanding Young Researcher Award.
+		Jeg går førsteklasse på Fysikk og Matematikk hos NTNU, jeg er også del av prosjektet CogIntro, hvor vi får en innføring i AI!
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ola.nordmann@ntnu.no">Email</a> &nbsp;/&nbsp;
