jeg la til bilder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="/Users/kristianflatval/Downloads/HU5A6517.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/images/JonBarron.jpg" class="hoverZoomLink"></a>
+                <a href="images/images/HU5A6517.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/images/HU5A6517.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
@@ -52,7 +52,7 @@
 
     <tr bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
-        <img src='/Users/kristianflatval/Downloads/HU5A6517.jpg' width="160" style="border-radius: 8px;">
+        <img src='images/images/HU5A6517.jpg' width="160" style="border-radius: 8px;">
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
         <a href="#arctic-vision">
@@ -80,7 +80,7 @@
 
     <tr>
       <td style="padding:16px;width:20%;vertical-align:middle">
-        <img src='/Users/kristianflatval/Downloads/HU5A6517.jpg' width="160" style="border-radius: 8px;">
+        <img src='images/images/HU5A6517.jpg' width="160" style="border-radius: 8px;">
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
         <a href="#fjord-robotics">
@@ -118,7 +118,7 @@
 
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="/Users/kristianflatval/Downloads/HU5A6517.jpg" alt="Nordic AI Initiative" width="160" style="border-radius: 8px;">
+                <img src="images/images/HU5A6517.jpg" alt="Nordic AI Initiative" width="160" style="border-radius: 8px;">
               </td>
               <td width="80%" valign="center">
                 <a href="#nordic-ai">Nordic AI for Climate Initiative</a>
