la til tidligere arbeidserfaring

--- a/index.html
+++ b/index.html
@@ -133,13 +133,10 @@
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
               <td>
-                <h2>Awards & Recognition</h2>
+                <h2>Previous experience</h2>
                 <ul>
-                  <li>Norwegian Research Council Outstanding Young Researcher Award (2024)</li>
-                  <li>SINTEF Innovation Award for Sustainable AI (2023)</li>
-                  <li>Best Paper Award, Nordic Conference on Machine Learning (2023)</li>
-                  <li>Arctic Circle Assembly Science Award (2022)</li>
-                  <li>IEEE Young Professional Award in Sustainable Technology (2022)</li>
+                  <li>Private first class,His Majesty the Kings Guard, 4th company, Yankee (2024)</li>
+                  <li>Kristiansund Kommune, summern internships as assistant caregiver (2022-2025)</li>
                 </ul>
               </td>
             </tr>
